--- a/build.gradle
+++ b/build.gradle
@@ -6,26 +6,41 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath "com.google.cloud.tools:appengine-gradle-plugin:+"
   }
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'com.google.cloud.tools.appengine'
 
 group = 'jp.co.esm.bento'
 version = '0.0.1-SNAPSHOT'
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
   mavenCentral()
 }
 
+configurations {
+  compile.exclude module: 'jul-to-slf4j'
+}
 
 dependencies {
-  compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-  compile('org.springframework.boot:spring-boot-starter-web')
-  compileOnly('org.projectlombok:lombok')
-  testCompile('org.springframework.boot:spring-boot-starter-test')
+  compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+  compile 'org.springframework.boot:spring-boot-starter-web'
+  providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+  compile 'com.google.appengine:appengine:+'
+  compileOnly 'org.projectlombok:lombok'
+  compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
+  testCompile 'org.springframework.boot:spring-boot-starter-test'
+}
+
+bootRepackage {
+  enabled = false
 }
