--- a/vue/package.json
+++ b/vue/package.json
@@ -7,7 +7,8 @@
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "mock": "cd dev && easymock"
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
@@ -28,6 +29,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "copy-webpack-plugin": "^4.1.0",
     "css-loader": "^0.28.7",
+    "easymock": "^0.2.28",
     "es6-promise": "^4.1.1",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
@@ -47,6 +49,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.0",
     "json-loader": "^0.5.7",
+    "npm-run-all": "^4.1.2",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^1.0.0",
