cdではなくeasymockのオプションでlocation指定

--- a/vue/package.json
+++ b/vue/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src",
-    "mock": "cd dev && easymock",
+    "mock": "easymock -d dev",
     "dev-mock": "run-p dev mock"
   },
   "dependencies": {
