--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
   compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
   compile 'org.springframework.boot:spring-boot-starter-web'
   providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-  compile 'com.google.appengine:appengine:+'
+  compile 'com.google.appengine:appengine-api-1.0-sdk:+'
   compileOnly 'org.projectlombok:lombok'
   compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
   testCompile 'org.springframework.boot:spring-boot-starter-test'
