--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ group = 'jp.co.esm.bento'
 version = '0.0.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
+targetCompatibility = 1.8 
 
 ext {
   vueDir = "${project.projectDir}/vue"
@@ -49,6 +49,8 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
   testCompile 'org.springframework.boot:spring-boot-starter-test'
+  testCompile  "com.google.appengine:appengine-api-stubs:+"
+  testCompile  "com.google.appengine:appengine-testing:+"
 }
 
 node {
