--- a/vue/package.json
+++ b/vue/package.json
@@ -17,7 +17,8 @@
     "quasar-framework": "^0.14.6",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "moment": "^2.15.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
