--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,11 @@ dependencies {
   compile 'com.google.appengine:appengine-api-1.0-sdk:+'
   compileOnly 'org.projectlombok:lombok'
   compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
-  compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.10"
+  compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.10'
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8.1'
   testCompile 'org.springframework.boot:spring-boot-starter-test'
-  testCompile  "com.google.appengine:appengine-api-stubs:+"
-  testCompile  "com.google.appengine:appengine-testing:+"
+  testCompile  'com.google.appengine:appengine-api-stubs:+'
+  testCompile  'com.google.appengine:appengine-testing:+'
 }
 
 node {
