レビュー指摘対応

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 google:
   auth:
-    client-id: 599875423654-67v0atig5nn91to63c2d4a7lmpgi55ns.apps.googleusercontent.com
+    client-id: 
     hosted-domain: esm.co.jp
   api:
     calendar:
