--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath "com.google.cloud.tools:appengine-gradle-plugin:+"
+    classpath "com.google.cloud.tools:appengine-gradle-plugin:1.+"
   }
 }
 
@@ -49,6 +49,8 @@ dependencies {
   compile 'org.springframework.boot:spring-boot-starter-security'
   providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
   compile 'com.google.appengine:appengine-api-1.0-sdk:+'
+  compile 'com.google.api-client:google-api-client:1.+'
+  compile 'com.google.http-client:google-http-client-appengine:1.+'
   compileOnly 'org.projectlombok:lombok'
   compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.10'
