--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.8.2",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
